# aws-labs

./: .env.example  .gitignore  Makefile  NOTES.md  README.md  STUDY.md  flake.nix  pyproject.toml
.github/workflows/: terraform.yml
cdk/lambda-api/: cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lambda-api/lambda/: handler.py
cdk/lambda-api/lib/: stack.ts
terraform/labs/01-lambda-api/: .terraform.lock.hcl  handler.py  main.tf  outputs.tf  pyproject.toml  variables.tf
terraform/labs/01-lambda-api/tests/: test_handler.py
terraform/labs/02-dynamodb/: handler.py  main.tf  outputs.tf  pyproject.toml  variables.tf
terraform/labs/02-dynamodb/tests/: test_handler.py
terraform/labs/03-sqs-sns/: handler.py  main.tf  outputs.tf  pyproject.toml  variables.tf
terraform/labs/03-sqs-sns/tests/: test_handler.py
terraform/labs/04-kinesis/: handler.py  main.tf  outputs.tf  pyproject.toml  variables.tf
terraform/labs/04-kinesis/tests/: test_handler.py
terraform/labs/05-ecs-fargate/: main.tf  outputs.tf  variables.tf
terraform/labs/06-cognito/: main.tf  outputs.tf  variables.tf
terraform/labs/07-cicd/: buildspec.yml  main.tf  outputs.tf  variables.tf
terraform/labs/08-monitoring/: handler.py  main.tf  outputs.tf  pyproject.toml  variables.tf
